Kiwix 0.9 rc2
$ FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
* FIXED: kiwix-install crashes 
* FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
* FIXED: open link in new tab from the right-click contextual menu (ID: 3553735)
* NEW: CTRL+R to load random article (ID: 3549370)
* NEW: Improved server dialog window
* NEW: "Inverted colors" feature (ID: 3551975)
* NEW: Start internationalisation of kiwix-plug welcome page (en, fr, de)
* NEW: Autoredirect to the kiwix-plug localised welcome page
* NEW: Way to start search from the console with -search cmd line argument (ID: 3538176)

Kiwix 0.9 rc1
* FIXED: Smoothier zooming (ID: 3469927)
* FIXED: "Evolution" skin (ID: 3444112)
* FIXED: Bad aria2c process mgmt. by introducing aria2 v1.14 (ID: 3430225)
* FIXED: Invisible menuitems icons on GNU/Linux
* FIXED: Blanck kiwix-serve 404 error pages (ID: 3417227)
* FIXED: Error during the installation of Ubuntu packages (ID: 3437855)
* FIXED: Bad singleton-window implementation (ID: 3444121)
* FIXED: Compilation with CLucene 2.3 (ID: 3405531)
* FIXED: Too high article/media count in the ZIM library (ID: 3396763)
* FIXED: Kiwix-serve sporadic invisible search box with non-latin contents
* FIXED: Toolbar wrong height on Sugar with XOs (ID: 3471281)
* FIXED: Broken ZIM loading on XO OSes 0.8x (ID: 3471279)
* FIXED: Library filtering by language with ISO639-1 language code ZIM metadata
* FIXED: Continuing indexing process if quitting app.
* FIXED: Text-only zoom. Pictures are now zoomed with Text (ID: 3525284)
* FIXED: Multiple small UI issues (ID: 3514842)
* FIXED: Windows specific ZIM loading problem with accented&relative paths
* FIXED: Zoom factor is not anymore registered over sessions (ID: 3536559)
* FIXED: OSX menu, it feels like a native app. (ID: 3444682, ID: 3444101)
* FIXED: Avoid killing the GNU/Linux session by quitting if aria2 is not launched
* FIXED: Sporadic "segmentation fault" errors in the GNU/Linux file picker (ID: 3512771)