@@ -1,8 +1,9 @@
 Kiwix 0.9 rc2
-$ FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
+* FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
 * FIXED: kiwix-install crashes 
 * FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
 * FIXED: open link in new tab from the right-click contextual menu (ID: 3553735)
+* NEW: improvement of the "verbose" mode in kiwix-install and kiwix-index
 * NEW: CTRL+R to load random article (ID: 3549370)
 * NEW: Improved server dialog window
 * NEW: "Inverted colors" feature (ID: 3551975)
